--- a/wps/pywps.cfg
+++ b/wps/pywps.cfg
@@ -6,7 +6,7 @@ abstract=See http://pywps.wald.intevation.org and http://www.opengeospatial.org/
 fees=None
 constraints=none
 serveraddress=http://crisma.ait.ac.at/indicators/pywps.cgi
-keywords=GRASS,GIS,WPS
+keywords=CRISMA,indicator,WPS
 lang=en-CA
 
 [provider]
@@ -14,9 +14,9 @@ providerName=CRISMA project test server at AIT
 individualName=Peter Kutschera
 #positionName=Your Position
 #role=Your role
-#deliveryPoint=Street
-#city=City
-#postalCode=000 00
+deliveryPoint=B 60
+city=Seibersdorf
+postalCode=2444
 country=at
 electronicMailAddress=Peter.Kutschera@ait.ac.at
 providerSite=http://www.ait.ac.at
