--- a/wps/pywps.cfg
+++ b/wps/pywps.cfg
@@ -36,6 +36,7 @@ outputUrl=http://localhost/wps/wpsoutputs
 outputPath=/var/www/wps/wpsoutputs
 debug=true # deprecated since 3.2, use logLevel instead
 logFile=
+#logFile=/tmp/pywps.log
 logLevel=INFO
 
 [grass]
